feat(system design): add OOPs concepts and code examples (Classes, Encapsulation, Abstraction, Inheritance, Polymorphism)

--- a/system-design-concepts/01. OOP Concepts/1. oops-notes.md
+++ b/system-design-concepts/01. OOP Concepts/1. oops-notes.md
@@ -14,15 +14,15 @@
 
 ##  Class and Object
 
-### 1️⃣ What is a Class?
+### 1. What is a Class?
 
 A **class** is a **blueprint** or **template** for creating objects. Think of it like a blueprint for a car — the blueprint defines what a car **has** (attributes like color, model) and what a car **can do** (functions like startEngine, honk).
 
-**Attributes/Properties/Data/State**: What an can object holds (e.g., brand, model in a Car class).
-**Methods/Action/Behaviors**: Actions an object can perform (e.g., startEngine(), accelerate()).
+* **Attributes/Properties/Data/State**: What an can object holds (e.g., brand, model in a Car class).
+* **Methods/Action/Behaviors**: Actions an object can perform (e.g., startEngine(), accelerate()).
 
 ---
-In your code:
+Example code:
 ```cpp
 class Student {
 public:
@@ -46,7 +46,7 @@ public:
 
 ---
 
-### 2️⃣ What is an Object?
+### 2. What is an Object?
 
 An **object** is a **real instance** of a class. If class is the blueprint, the object is the actual “thing” made from that blueprint.
 
@@ -59,7 +59,7 @@ Student sid;
 
 ---
 
-### 3️⃣ Accessing Data Members and Methods
+### 3. Accessing Data Members and Methods
 
 Once you have an object, you can access its attributes or methods using the **dot operator (`.`)**:
 
@@ -77,7 +77,7 @@ cout << sid.name << endl; // Prints the name
 
 ---
 
-### 4️⃣ How it all works together
+### 4. How it all works together
 
 ```
 Class: Student (Blueprint)
@@ -105,7 +105,7 @@ Think of it like:
 
 ---
 
-### 5️⃣ Key Concepts from this example
+### 5. Key Concepts from this example
 
 1. **Class** = template / blueprint
 2. **Object** = real instance of class
@@ -294,9 +294,6 @@ public:
 
 👉 You **cannot create an object of Vehicle directly**, only a pointer/reference to it.
 
-
----
-Great questions 👍 Let’s clear this **step by step**.
 
 ---
 
